bugs/tests/fuzz-05-18-13-21-59/r_790_r_43_inverted-range_F10_P43_6_M1.stderr
likely_hits/r_790_r_43_inverted-range_F10_P43_6_M1.p4(3): [--Werror=type-error] error: Array index {} must be an integer, but it has type tuple<>
[{ }
 ^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

